tests/snapshots/run_wpt_conformance__litert_ceil_float16_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "ceil.https.any.js",
    "ceil float16 2D tensor",
    "litert",
    "PASS",
)
